# arx5-sdk

./: CMakeLists.txt  pyproject.toml
lib/: soem_stub.c
python/: CMakeLists.txt  arx5_pybind.cpp
