[build-system]
requires = ["scikit-build-core>=0.9"]
build-backend = "scikit_build_core.build"

[project]
name = "arx5-interface"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["numpy"]

[tool.scikit-build]
cmake.build-type = "Release"
build.targets = ["arx5_interface"]
install.components = ["python"]
wheel.packages = []
